--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
   <!-- Kontakt -->
   <section id="contact" class="p-12 text-center">
     <h3 class="text-2xl font-bold mb-4">Kontakt</h3>
-    <p class="mb-2">📍 Musterstraße 123, 12345 Musterstadt</p>
-    <p class="mb-2">📞 +49 123 456789</p>
+    <p class="mb-2">📍 Innstraße 14 38120 Braunschweig</p>
+    <p class="mb-2">📞 +49 151 2831 2583</p>
     <p class="mb-4">✉️ aountewstech@gmail.com</p>
     <a href="mailto:aountewstech@gmail.com" class="px-6 py-3 bg-blue-600 text-white font-semibold rounded-xl shadow-md hover:bg-blue-700">
       E-Mail schreiben
