--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <section class="grid grid-cols-1 md:grid-cols-3 gap-8 p-12">
     <div id="rep" data-aos="zoom-in" class="bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
       <h3 class="text-xl font-bold mb-2 text-purple-600">Reparaturen</h3>
-      <p>Wir reparieren PCs, Laptops und Smartphones schnell & zuverlässig.</p>
+      <p>Wir reparieren PCs schnell & zuverlässig.</p>
     </div>
 
     <div id="builds" data-aos="zoom-in" data-aos-delay="200" class="bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
