--- a/about.html
+++ b/about.html
@@ -1,1 +1,62 @@
-<h2 class="text-4xl font-bold text-purple-600">PC-Builds-Seite (leer)</h2>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>A&T Tech – Über uns</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+</head>
+<body class="min-h-screen bg-gray-50 text-gray-900">
+
+  <!-- Navbar -->
+  <nav class="flex justify-between items-center p-6 bg-white shadow-lg sticky top-0 z-50">
+    <h1 class="text-2xl font-bold text-purple-600">A&T Tech</h1>
+    <ul class="flex gap-6 font-medium">
+      <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
+      <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
+      <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
+      <li><a href="services.html" class="hover:text-purple-500 transition">Dienstleistungen</a></li>
+      <li><a href="about.html" class="hover:text-purple-500 transition font-bold">Über uns</a></li>
+      <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero Section -->
+  <section class="flex flex-col items-center justify-center text-center py-24 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
+    <h2 data-aos="fade-down" class="text-5xl font-extrabold mb-4">Über A&T Tech</h2>
+    <p data-aos="fade-up" data-aos-delay="200" class="max-w-2xl text-lg opacity-90">
+      Qualität, Service und Leidenschaft für Technik – unser Team sorgt dafür, dass deine Geräte immer auf dem neuesten Stand sind.
+    </p>
+  </section>
+
+  <!-- Team / Info Section -->
+  <section class="p-12 bg-purple-50 text-center">
+    <h3 data-aos="fade-right" class="text-3xl font-bold mb-8 text-purple-700">Unser Team</h3>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+      <div data-aos="zoom-in" class="bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+        <h4 class="text-xl font-bold text-purple-600 mb-2">Max Mustermann</h4>
+        <p>Gründer & IT-Experte – spezialisiert auf Hardware und Custom Builds.</p>
+      </div>
+      <div data-aos="zoom-in" data-aos-delay="200" class="bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+        <h4 class="text-xl font-bold text-purple-600 mb-2">Lisa Müller</h4>
+        <p>Software-Spezialistin – kümmert sich um Installationen, Updates und Datenrettung.</p>
+      </div>
+      <div data-aos="zoom-in" data-aos-delay="400" class="bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+        <h4 class="text-xl font-bold text-purple-600 mb-2">Tom Schneider</h4>
+        <p>Netzwerk & Support – richtet Netzwerke ein und bietet technischen Support vor Ort.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="text-center p-6 bg-gray-200 mt-12">
+    <p>© 2025 A&T Tech – Alle Rechte vorbehalten.</p>
+  </footer>
+
+  <script>
+    AOS.init({ duration: 1000, once: true });
+  </script>
+</body>
+</html>
