--- a/reparaturen.html
+++ b/reparaturen.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reparaturen</title>
+  <title>A&T Tech – Reparaturen</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body class="min-h-screen bg-gray-50 text-gray-900">
 
+  <!-- Navbar -->
   <nav class="flex justify-between items-center p-6 bg-white shadow-lg sticky top-0 z-50">
     <h1 class="text-2xl font-bold text-purple-600">A&T Tech</h1>
     <ul class="flex gap-6 font-medium">
       <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
-      <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
+      <li><a href="reparaturen.html" class="hover:text-purple-500 transition font-bold">Reparaturen</a></li>
       <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
       <li><a href="services.html" class="hover:text-purple-500 transition">Dienstleistungen</a></li>
       <li><a href="about.html" class="hover:text-purple-500 transition">Über uns</a></li>
@@ -20,9 +23,37 @@
     </ul>
   </nav>
 
-  <section class="flex items-center justify-center h-[80vh]">
-    <h2 class="text-4xl font-bold text-purple-600">Reparaturen-Seite (leer)</h2>
+  <!-- Hero -->
+  <section class="flex flex-col items-center justify-center text-center py-24 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
+    <h2 data-aos="fade-down" class="text-5xl font-extrabold mb-4">Reparaturen</h2>
+    <p data-aos="fade-up" data-aos-delay="200" class="max-w-2xl text-lg opacity-90">
+      Wir reparieren PCs, Laptops und Smartphones zuverlässig & schnell.
+    </p>
   </section>
 
+  <!-- Reparaturarten -->
+  <section class="grid grid-cols-1 md:grid-cols-3 gap-8 p-12">
+    <div data-aos="fade-right" class="bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+      <h3 class="text-xl font-bold mb-2 text-purple-600">PC Reparatur</h3>
+      <p>Hardware- & Software-Probleme schnell behoben.</p>
+    </div>
+    <div data-aos="fade-up" data-aos-delay="200" class="bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+      <h3 class="text-xl font-bold mb-2 text-purple-600">Laptop Reparatur</h3>
+      <p>Von Display bis Mainboard – wir kümmern uns um alles.</p>
+    </div>
+    <div data-aos="fade-left" data-aos-delay="400" class="bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+      <h3 class="text-xl font-bold mb-2 text-purple-600">Smartphone Reparatur</h3>
+      <p>Displays, Akku oder Software – schnell wieder einsatzbereit.</p>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="text-center p-6 bg-gray-200 mt-12">
+    <p>© 2025 A&T Tech – Alle Rechte vorbehalten.</p>
+  </footer>
+
+  <script>
+    AOS.init({ duration: 1000, once: true });
+  </script>
 </body>
 </html>
