--- a/about.html
+++ b/about.html
@@ -36,16 +36,12 @@
     <h3 data-aos="fade-right" class="text-3xl font-bold mb-8 text-purple-700">Unser Team</h3>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
       <div data-aos="zoom-in" class="bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-        <h4 class="text-xl font-bold text-purple-600 mb-2">Max Mustermann</h4>
+        <h4 class="text-xl font-bold text-purple-600 mb-2">Ilias Aoun</h4>
         <p>Gründer & IT-Experte – spezialisiert auf Hardware und Custom Builds.</p>
       </div>
-      <div data-aos="zoom-in" data-aos-delay="200" class="bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-        <h4 class="text-xl font-bold text-purple-600 mb-2">Lisa Müller</h4>
-        <p>Software-Spezialistin – kümmert sich um Installationen, Updates und Datenrettung.</p>
-      </div>
       <div data-aos="zoom-in" data-aos-delay="400" class="bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-        <h4 class="text-xl font-bold text-purple-600 mb-2">Tom Schneider</h4>
-        <p>Netzwerk & Support – richtet Netzwerke ein und bietet technischen Support vor Ort.</p>
+        <h4 class="text-xl font-bold text-purple-600 mb-2">Dennis Tews</h4>
+        <p>Gründer & IT-Experte – spezialisiert auf Hardware und Custom Builds.</p>
       </div>
     </div>
   </section>
