--- a/about.html
+++ b/about.html
@@ -32,19 +32,20 @@
   </section>
 
   <!-- Team / Info Section -->
-  <section class="p-12 bg-purple-50 text-center">
-    <h3 data-aos="fade-right" class="text-3xl font-bold mb-8 text-purple-700">Unser Team</h3>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-      <div data-aos="zoom-in" class="bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-        <h4 class="text-xl font-bold text-purple-600 mb-2">Ilias Aoun</h4>
-        <p>Gründer & IT-Experte – spezialisiert auf Hardware und Custom Builds.</p>
-      </div>
-      <div data-aos="zoom-in" data-aos-delay="400" class="bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-        <h4 class="text-xl font-bold text-purple-600 mb-2">Dennis Tews</h4>
-        <p>Gründer & IT-Experte – spezialisiert auf Hardware und Custom Builds.</p>
-      </div>
+ <section class="p-12 bg-purple-50 text-center">
+  <h3 data-aos="fade-right" class="text-3xl font-bold mb-8 text-purple-700">Unser Team</h3>
+  <div class="flex flex-col md:flex-row gap-8">
+    <div data-aos="zoom-in" class="flex-1 bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+      <h4 class="text-xl font-bold text-purple-600 mb-2">Ilias Aoun</h4>
+      <p>Gründer & IT-Experte – spezialisiert auf Hardware und Custom Builds.</p>
     </div>
-  </section>
+    <div data-aos="zoom-in" data-aos-delay="400" class="flex-1 bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+      <h4 class="text-xl font-bold text-purple-600 mb-2">Dennis Tews</h4>
+      <p>Gründer & IT-Experte – spezialisiert auf Hardware und Custom Builds.</p>
+    </div>
+  </div>
+</section>
+
 
   <!-- Footer -->
   <footer class="text-center p-6 bg-gray-200 mt-12">
