--- a/index.html
+++ b/index.html
@@ -5,15 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>A&T Tech – Home</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = { darkMode: 'class' } // Dark Mode aktivieren
+  </script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
-<body class="min-h-screen bg-gray-50 text-gray-900">
+<body class="min-h-screen bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-300">
 
   <!-- Navbar -->
-  <nav class="flex justify-between items-center p-6 bg-white shadow-lg sticky top-0 z-50">
-    <h1 class="text-2xl font-bold text-purple-600">A&T Tech</h1>
-    <ul class="flex gap-6 font-medium">
+  <nav class="flex justify-between items-center p-6 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
+    <!-- Logo -->
+    <h1>
+      <img src="assets/logo.png" alt="A&T Tech Logo" class="h-10">
+    </h1>
+
+    <!-- Mobile Menü Button -->
+    <div class="flex items-center gap-4">
+      <button id="darkToggle" class="p-2 rounded-lg bg-purple-500 text-white">🌙</button>
+      <button id="menuToggle" class="md:hidden text-3xl">☰</button>
+    </div>
+
+    <!-- Menü -->
+    <ul id="menu" class="hidden md:flex gap-6 font-medium">
       <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
       <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
       <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
@@ -33,27 +47,44 @@
 
   <!-- Features -->
   <section class="grid grid-cols-1 md:grid-cols-3 gap-8 p-12">
-    <div data-aos="zoom-in" class="bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+    <div data-aos="zoom-in" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
       <h3 class="text-xl font-bold mb-2 text-purple-600">Reparaturen</h3>
       <p>Wir reparieren PCs schnell & zuverlässig.</p>
     </div>
-    <div data-aos="zoom-in" data-aos-delay="200" class="bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+    <div data-aos="zoom-in" data-aos-delay="200" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
       <h3 class="text-xl font-bold mb-2 text-purple-600">PC-Builds</h3>
       <p>Custom Gaming-PCs & Workstations – perfekt auf deine Bedürfnisse abgestimmt.</p>
     </div>
-    <div data-aos="zoom-in" data-aos-delay="400" class="bg-white rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
+    <div data-aos="zoom-in" data-aos-delay="400" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
       <h3 class="text-xl font-bold mb-2 text-purple-600">Dienstleistungen</h3>
       <p>Von Software-Setup bis Datenrettung – wir kümmern uns um alles.</p>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="text-center p-6 bg-gray-200 mt-12">
+  <footer class="text-center p-6 bg-gray-200 dark:bg-gray-700 mt-12">
     <p>© 2025 A&T Tech – Alle Rechte vorbehalten.</p>
   </footer>
 
   <script>
+    // AOS Init
     AOS.init({ duration: 1000, once: true });
+
+    // Dark Mode Toggle
+    const btn = document.getElementById('darkToggle');
+    btn.addEventListener('click', () => {
+      document.body.classList.toggle('dark');
+    });
+
+    // Mobile Menü Toggle
+    const toggle = document.getElementById('menuToggle');
+    const menu = document.getElementById('menu');
+    toggle.addEventListener('click', () => {
+      menu.classList.toggle('hidden');
+      menu.classList.toggle('flex');
+      menu.classList.toggle('flex-col');
+    });
   </script>
 </body>
 </html>
+
