--- a/contact.html
+++ b/contact.html
@@ -60,10 +60,9 @@
 
     <!-- Google Maps -->
     <div data-aos="fade-left" class="rounded-2xl overflow-hidden shadow-xl">
-      <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.999581785959!2d2.292292615674241!3d48.858373079287854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fdaaa12345%3A0x123456789abcdef!2sEiffelturm!5e0!3m2!1sde!2sde!4v1675612345678!5m2!1sde!2sde" 
-        width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy">
-      </iframe>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d152.69889176761245!2d10.483227019233805!3d52.240072926503274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sde!2sde!4v1755784924670!5m2!1sde!2sde"
+       width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">       
+       </iframe>
     </div>
   </section>
 
