--- a/contact.html
+++ b/contact.html
@@ -46,17 +46,15 @@
   </section>
 
   <!-- Kontaktformular + Map -->
-  <section class="grid grid-cols-1 md:grid-cols-2 gap-8 p-12">
-    <!-- Kontaktformular -->
-    <div data-aos="fade-right" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6">
-      <h3 class="text-2xl font-bold mb-4 text-purple-600">Schreib uns</h3>
-      <form class="flex flex-col gap-4">
-        <input type="text" placeholder="Dein Name" class="p-3 rounded-lg border dark:border-gray-700 bg-gray-50 dark:bg-gray-900">
-        <input type="email" placeholder="Deine E-Mail" class="p-3 rounded-lg border dark:border-gray-700 bg-gray-50 dark:bg-gray-900">
-        <textarea placeholder="Deine Nachricht" rows="5" class="p-3 rounded-lg border dark:border-gray-700 bg-gray-50 dark:bg-gray-900"></textarea>
-        <button class="bg-purple-600 text-white py-3 rounded-lg hover:bg-purple-700 transition">Absenden</button>
-      </form>
-    </div>
+ <section class="grid grid-cols-1 md:grid-cols-2 gap-8 p-12">
+  <!-- E-Mail Button -->
+  <div data-aos="fade-right" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 flex flex-col justify-center items-center">
+    <h3 class="text-2xl font-bold mb-6 text-purple-600">Schreib uns direkt</h3>
+    <a href="mailto:auontewstech@gmail.com" 
+       class="bg-purple-600 text-white px-6 py-3 rounded-lg text-lg font-semibold hover:bg-purple-700 transition">
+      📩 E-Mail an uns senden
+    </a>
+  </div>
 
     <!-- Google Maps -->
     <div data-aos="fade-left" class="rounded-2xl overflow-hidden shadow-xl">
