--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
 
     // Dark Mode Toggle
     const btn = document.getElementById('darkToggle');
-    btn.addEventListener('click', () => {
-      document.body.classList.toggle('dark');
-    });
+btn.addEventListener('click', () => {
+  document.documentElement.classList.toggle('dark');
+});
+
 
     // Mobile Menü Toggle
     const toggle = document.getElementById('menuToggle');
