--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,10 @@
     </p>
   </section>
 
-  <!-- Kontaktbereich -->
+  <!-- Kontakt + Map -->
   <section class="grid grid-cols-1 md:grid-cols-2 gap-8 p-12">
     <!-- E-Mail Button -->
-    <div data-aos="fade-right" class="bg-gray-100 dark:bg-gray-800 rounded-2xl shadow-xl p-6 flex flex-col justify-center items-center transition-colors duration-500">
+    <div data-aos="fade-right" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 flex flex-col justify-center items-center">
       <h3 class="text-2xl font-bold mb-6 text-purple-600">Schreib uns direkt</h3>
       <a href="mailto:auontewstech@gmail.com" 
          class="bg-purple-600 text-white px-6 py-3 rounded-lg text-lg font-semibold hover:bg-purple-700 transition">
@@ -58,14 +58,14 @@
 
     <!-- Google Maps -->
     <div data-aos="fade-left" class="rounded-2xl overflow-hidden shadow-xl">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d152.69889176761245!2d10.483227019233805!3d52.240072926503274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sde!2sde!4v1755784924670!5m2!1sde!2sde"
+     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d152.69889176761245!2d10.483227019233805!3d52.240072926503274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sde!2sde!4v1755784924670!5m2!1sde!2sde"
         width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy">     
-      </iframe>
+       </iframe>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="text-center p-6 bg-gray-100 dark:bg-gray-800 mt-12 transition-colors duration-500">
+  <footer class="text-center p-6 bg-gray-200 dark:bg-gray-700 mt-12">
     <p>© 2025 A&T Tech – Alle Rechte vorbehalten.</p>
   </footer>
 
@@ -73,13 +73,35 @@
     // AOS Init
     AOS.init({ duration: 1000, once: true });
 
-    // Dark Mode Toggle
-const btn = document.getElementById('darkToggle');
-btn.addEventListener('click', () => {
-  document.documentElement.classList.toggle('dark');
-});
+    // Dark Mode Toggle mit Icon & LocalStorage
+    const btn = document.getElementById('darkToggle');
 
+    function updateIcon() {
+      if (document.documentElement.classList.contains('dark')) {
+        btn.textContent = "☀️";
+      } else {
+        btn.textContent = "🌙";
+      }
+    }
 
+    // gespeichertes Theme prüfen
+    if (localStorage.getItem('theme') === 'dark') {
+      document.documentElement.classList.add('dark');
+    }
+
+    updateIcon();
+
+    btn.addEventListener('click', () => {
+      document.documentElement.classList.toggle('dark');
+
+      if (document.documentElement.classList.contains('dark')) {
+        localStorage.setItem('theme', 'dark');
+      } else {
+        localStorage.setItem('theme', 'light');
+      }
+
+      updateIcon();
+    });
 
     // Mobile Menü Toggle
     const toggle = document.getElementById('menuToggle');
@@ -92,5 +114,3 @@ btn.addEventListener('click', () => {
   </script>
 </body>
 </html>
-
-
