--- a/services.html
+++ b/services.html
@@ -14,28 +14,33 @@
 <body class="min-h-screen bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-300">
 
   <!-- Navbar -->
-  <nav class="flex justify-between items-center p-6 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
-    <!-- Logo -->
-    <h1>
-      <img src="assets/logo.png" alt="A&T Tech Logo" class="h-10">
-    </h1>
+<nav class="flex justify-between items-center p-6 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
+  <!-- Logo -->
+  <h1>
+    <img src="assets/logo.png" alt="A&T Tech Logo" class="h-10">
+  </h1>
 
-    <!-- Mobile Menü Button -->
-    <div class="flex items-center gap-4">
-      <button id="darkToggle" class="p-2 rounded-lg bg-purple-500 text-white">🌙</button>
-      <button id="menuToggle" class="md:hidden text-3xl">☰</button>
-    </div>
+  <!-- Menü -->
+  <ul id="menu" class="hidden md:flex gap-6 font-medium items-center">
+    <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
+    <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
+    <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
+    <li><a href="services.html" class="hover:text-purple-500 transition">Dienstleistungen</a></li>
+    <li><a href="about.html" class="hover:text-purple-500 transition">Über uns</a></li>
+    <li><a href="contact.html" class="hover:text-purple-500 transition font-bold">Kontakt</a></li>
 
-    <!-- Menü -->
-    <ul id="menu" class="hidden md:flex gap-6 font-medium">
-      <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
-      <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
-      <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
-      <li><a href="services.html" class="hover:text-purple-500 transition font-bold">Dienstleistungen</a></li>
-      <li><a href="about.html" class="hover:text-purple-500 transition">Über uns</a></li>
-      <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>
-    </ul>
-  </nav>
+    <!-- Dark Mode Button direkt neben Kontakt -->
+    <li>
+      <button id="darkToggle" class="ml-4 p-2 rounded-lg bg-purple-500 text-white hover:bg-purple-600 transition">
+        🌙
+      </button>
+    </li>
+  </ul>
+
+  <!-- Mobile Menü Button -->
+  <button id="menuToggle" class="md:hidden text-3xl">☰</button>
+</nav>
+
 
   <!-- Hero -->
   <section class="flex flex-col items-center justify-center text-center py-24 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
