--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
     <!-- E-Mail Button -->
     <div data-aos="fade-right" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 flex flex-col justify-center items-center">
       <h3 class="text-2xl font-bold mb-6 text-purple-600">Schreib uns direkt</h3>
-      <a href="mailto:auontewstech@gmail.com" 
+      <a href="mailto:aountewstech@gmail.com" 
          class="bg-purple-600 text-white px-6 py-3 rounded-lg text-lg font-semibold hover:bg-purple-700 transition">
         📩 E-Mail an uns senden
       </a>
