--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <nav class="flex justify-between items-center p-6 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
   <!-- Logo -->
   <h1>
-    <img src="assets/logo.png" alt="A&T Tech Logo" class="h-10">
+    <img src="Bilder/" alt="A&T Tech Logo" class="h-10">
   </h1>
 
   <!-- Menü -->
