--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 
   <!-- Content -->
   <section class="p-12 grid md:grid-cols-2 gap-12 items-center">
-    <img src="assets/team.jpg" alt="Unser Team" class="rounded-2xl shadow-xl" data-aos="fade-right">
+    <img src="Bilder/WhatsApp Bild 2025-08-19 um 11.36.36_203e5b36.jpg" alt="Unser Team" class="rounded-2xl shadow-xl" data-aos="fade-right">
     <div data-aos="fade-left">
       <h3 class="text-2xl font-bold mb-4 text-purple-600">Unsere Mission</h3>
       <p class="mb-4">
