--- a/about.html
+++ b/about.html
@@ -53,17 +53,38 @@
   <!-- Content -->
   <section class="p-12 grid md:grid-cols-2 gap-12 items-center">
     <img src="Bilder/WhatsApp Bild 2025-08-19 um 11.36.36_203e5b36.jpg" alt="Unser Team" class="rounded-2xl shadow-xl" data-aos="fade-right">
-    <div data-aos="fade-left">
-      <h3 class="text-2xl font-bold mb-4 text-purple-600">Unsere Mission</h3>
-      <p class="mb-4">
-        Wir sind Technikbegeisterte mit dem Ziel, die beste Lösung für unsere Kunden zu bieten.
-        Egal ob Reparaturen, Gaming-PCs oder IT-Support – wir sind für dich da.
-      </p>
-      <p>
-        Mit jahrelanger Erfahrung und Leidenschaft für Technik bringen wir dein System wieder
-        auf Höchstleistung.
-      </p>
+   <section class="p-12 bg-gray-100 dark:bg-gray-900">
+  <div class="max-w-6xl mx-auto">
+    <h2 class="text-3xl font-bold text-center mb-12 text-purple-600">Unsere Reparaturen</h2>
+
+    <!-- Grid -->
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+      
+      <!-- Karte 1 -->
+      <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg hover:shadow-2xl transition">
+        <img src="assets/laptop.jpg" alt="Laptop Reparatur" class="w-full h-40 object-cover rounded-lg mb-4">
+        <h3 class="text-xl font-bold text-purple-600 mb-2">Laptop Reparatur</h3>
+        <p class="text-sm opacity-80">Von Display bis Mainboard – wir kümmern uns um alles.</p>
+      </div>
+
+      <!-- Karte 2 -->
+      <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg hover:shadow-2xl transition">
+        <img src="assets/pc.jpg" alt="PC Reparatur" class="w-full h-40 object-cover rounded-lg mb-4">
+        <h3 class="text-xl font-bold text-purple-600 mb-2">PC Reparatur</h3>
+        <p class="text-sm opacity-80">Wir tauschen Hardware, installieren Software und bringen dein System wieder zum Laufen.</p>
+      </div>
+
+      <!-- Karte 3 -->
+      <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg hover:shadow-2xl transition">
+        <img src="assets/phone.jpg" alt="Smartphone Reparatur" class="w-full h-40 object-cover rounded-lg mb-4">
+        <h3 class="text-xl font-bold text-purple-600 mb-2">Smartphone Reparatur</h3>
+        <p class="text-sm opacity-80">Ob Displaybruch oder Akkuwechsel – dein Handy ist bei uns in guten Händen.</p>
+      </div>
+
     </div>
+  </div>
+</section>
+
   </section>
 
   <!-- Footer -->
