--- a/about.html
+++ b/about.html
@@ -51,41 +51,38 @@
   </section>
 
   <!-- Content -->
-  <section class="p-12 grid md:grid-cols-2 gap-12 items-center">
-    <img src="Bilder/WhatsApp Bild 2025-08-19 um 11.36.36_203e5b36.jpg" alt="Unser Team" class="rounded-2xl shadow-xl" data-aos="fade-right">
-   <section class="p-12 bg-gray-100 dark:bg-gray-900">
-  <div class="max-w-6xl mx-auto">
-    <h2 class="text-3xl font-bold text-center mb-12 text-purple-600">Unsere Reparaturen</h2>
+<section class="grid grid-cols-1 md:grid-cols-2 gap-12 p-12">
+  <!-- Logo links -->
+  <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg flex items-center justify-center">
+    <img src="assets/logo.png" alt="ATTech Logo" class="w-64 h-64 object-contain">
+  </div>
 
-    <!-- Grid -->
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-      
-      <!-- Karte 1 -->
-      <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg hover:shadow-2xl transition">
-        <img src="assets/laptop.jpg" alt="Laptop Reparatur" class="w-full h-40 object-cover rounded-lg mb-4">
-        <h3 class="text-xl font-bold text-purple-600 mb-2">Laptop Reparatur</h3>
-        <p class="text-sm opacity-80">Von Display bis Mainboard – wir kümmern uns um alles.</p>
+  <!-- Gründer rechts -->
+  <div class="flex flex-col gap-8">
+    
+    <!-- Gründer 1 -->
+    <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg flex items-center gap-6">
+      <img src="assets/gruender1.jpg" alt="Gründer 1" class="w-24 h-24 rounded-full object-cover">
+      <div>
+        <h3 class="text-xl font-bold text-purple-600">Max Mustermann</h3>
+        <p class="text-gray-700 dark:text-gray-300">CEO & Hardware-Spezialist</p>
+        <p class="text-sm text-gray-500 dark:text-gray-400 mt-2">Experte für PC-Builds und Gaming-Systeme mit über 10 Jahren Erfahrung.</p>
       </div>
-
-      <!-- Karte 2 -->
-      <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg hover:shadow-2xl transition">
-        <img src="assets/pc.jpg" alt="PC Reparatur" class="w-full h-40 object-cover rounded-lg mb-4">
-        <h3 class="text-xl font-bold text-purple-600 mb-2">PC Reparatur</h3>
-        <p class="text-sm opacity-80">Wir tauschen Hardware, installieren Software und bringen dein System wieder zum Laufen.</p>
-      </div>
-
-      <!-- Karte 3 -->
-      <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg hover:shadow-2xl transition">
-        <img src="assets/phone.jpg" alt="Smartphone Reparatur" class="w-full h-40 object-cover rounded-lg mb-4">
-        <h3 class="text-xl font-bold text-purple-600 mb-2">Smartphone Reparatur</h3>
-        <p class="text-sm opacity-80">Ob Displaybruch oder Akkuwechsel – dein Handy ist bei uns in guten Händen.</p>
-      </div>
-
     </div>
+
+    <!-- Gründer 2 -->
+    <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg flex items-center gap-6">
+      <img src="assets/gruender2.jpg" alt="Gründer 2" class="w-24 h-24 rounded-full object-cover">
+      <div>
+        <h3 class="text-xl font-bold text-purple-600">Anna Beispiel</h3>
+        <p class="text-gray-700 dark:text-gray-300">CTO & Software-Expertin</p>
+        <p class="text-sm text-gray-500 dark:text-gray-400 mt-2">Spezialisiert auf IT-Support, Netzwerke und Softwarelösungen.</p>
+      </div>
+    </div>
+
   </div>
 </section>
 
-  </section>
 
   <!-- Footer -->
   <footer class="text-center p-6 bg-gray-200 dark:bg-gray-700 mt-12">
