--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 <section class="grid grid-cols-1 md:grid-cols-2 gap-12 p-12">
   <!-- Logo links -->
   <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg flex items-center justify-center">
-    <img src="assets/logo.png" alt="ATTech Logo" class="w-64 h-64 object-contain">
+    <img src="Bilder/WhatsApp Bild 2025-08-19 um 11.36.36_203e5b36.jpg" alt="ATTech Logo" class="w-64 h-64 object-contain">
   </div>
 
   <!-- Gründer rechts -->
