--- a/index.html
+++ b/index.html
@@ -51,20 +51,28 @@
   </section>
 
   <!-- Features -->
-  <section class="grid grid-cols-1 md:grid-cols-3 gap-8 p-12">
-    <div data-aos="zoom-in" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-      <h3 class="text-xl font-bold mb-2 text-purple-600">Reparaturen</h3>
-      <p>Wir reparieren PCs schnell & zuverlässig.</p>
-    </div>
-    <div data-aos="zoom-in" data-aos-delay="200" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-      <h3 class="text-xl font-bold mb-2 text-purple-600">PC-Builds</h3>
-      <p>Custom Gaming-PCs & Workstations – perfekt auf deine Bedürfnisse abgestimmt.</p>
-    </div>
-    <div data-aos="zoom-in" data-aos-delay="400" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-      <h3 class="text-xl font-bold mb-2 text-purple-600">Dienstleistungen</h3>
-      <p>Von Software-Setup bis Datenrettung – wir kümmern uns um alles.</p>
-    </div>
-  </section>
+ <section class="grid grid-cols-1 md:grid-cols-3 gap-6 p-8">
+  
+  <!-- Reparaturen -->
+  <a href="reparaturen.html" class="bg-gray-800 hover:bg-gray-700 transition p-6 rounded-2xl shadow-lg block">
+    <h3 class="text-xl font-bold text-purple-600">Reparaturen</h3>
+    <p class="text-gray-300 mt-2">Wir reparieren PCs schnell & zuverlässig.</p>
+  </a>
+
+  <!-- PC-Builds -->
+  <a href="pc-builds.html" class="bg-gray-800 hover:bg-gray-700 transition p-6 rounded-2xl shadow-lg block">
+    <h3 class="text-xl font-bold text-purple-600">PC-Builds</h3>
+    <p class="text-gray-300 mt-2">Custom Gaming-PCs & Workstations – perfekt auf deine Bedürfnisse abgestimmt.</p>
+  </a>
+
+  <!-- Dienstleistungen -->
+  <a href="dienstleistungen.html" class="bg-gray-800 hover:bg-gray-700 transition p-6 rounded-2xl shadow-lg block">
+    <h3 class="text-xl font-bold text-purple-600">Dienstleistungen</h3>
+    <p class="text-gray-300 mt-2">Von Software-Setup bis Datenrettung – wir kümmern uns um alles.</p>
+  </a>
+
+</section>
+
 
   <!-- Footer -->
   <footer class="text-center p-6 bg-gray-200 dark:bg-gray-700 mt-12">
