--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
   </a>
 
   <!-- PC-Builds -->
-  <a href="pc-builds.html" class="bg-gray-800 hover:bg-gray-700 transition p-6 rounded-2xl shadow-lg block">
+  <a href="builds.html" class="bg-gray-800 hover:bg-gray-700 transition p-6 rounded-2xl shadow-lg block">
     <h3 class="text-xl font-bold text-purple-600">PC-Builds</h3>
     <p class="text-gray-300 mt-2">Custom Gaming-PCs & Workstations – perfekt auf deine Bedürfnisse abgestimmt.</p>
   </a>
 
   <!-- Dienstleistungen -->
-  <a href="dienstleistungen.html" class="bg-gray-800 hover:bg-gray-700 transition p-6 rounded-2xl shadow-lg block">
+  <a href="services.html" class="bg-gray-800 hover:bg-gray-700 transition p-6 rounded-2xl shadow-lg block">
     <h3 class="text-xl font-bold text-purple-600">Dienstleistungen</h3>
     <p class="text-gray-300 mt-2">Von Software-Setup bis Datenrettung – wir kümmern uns um alles.</p>
   </a>
