--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
 
     <!-- Gründer 2 -->
     <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg flex items-center gap-6">
-      <img src="assets/gruender2.jpg" alt="Gründer 2" class="w-24 h-24 rounded-full object-cover">
+      <img src="Bilder/Bild_2025-08-21_174334259.png" alt="Gründer 2" class="w-24 h-24 rounded-full object-cover">
       <div>
         <h3 class="text-xl font-bold text-purple-600">Dennis Tews</h3>
         <p class="text-gray-700 dark:text-gray-300">CTO & Hardware-Spezialist</p>
