--- a/builds.html
+++ b/builds.html
@@ -58,7 +58,7 @@
       <p>High-End Gaming mit starker Grafikleistung und schneller Hardware.</p>
     </div>
     <div data-aos="fade-up" data-aos-delay="200" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300">
-      <img src="Bilder/workstation_pcs.png" alt="Workstation PC" class="rounded-lg mb-4">
+      <img src="Bilder/Workstation_Schweiz_North_2023_1.png" alt="Workstation PC" class="rounded-lg mb-4">
       <h3 class="text-xl font-bold mb-2 text-purple-600">Workstation</h3>
       <p>Für professionelle Arbeit: CAD, 3D-Rendering & Videobearbeitung.</p>
     </div>
